--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 button {
-    background-color: purple;
+    background-color: rgb(232, 79, 232);
     color: #fff;
     width: 250px;
     height: 50px;
@@ -32,7 +32,7 @@ button {
 }
 
 #subt {
-    background-color: yellow;
+    background-color: rgb(220, 47, 20);
     color: #000;
     width: 350px;
     height: 50px;
@@ -63,7 +63,7 @@ button {
 }
 
 .guesses {
-    background-color: #12aab4;
+    background-color: #7dc9cf;
 }
 
 #wrapper {
